css, index: Make map full-screen

--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,4 @@
-h1 {
-    text-align: center;
-}
-
-#map {
-    height: 80%;
-    width: 100%;
-}
-
-html, body, #container {
+html, body, #map {
     height: 100%;
     margin: 0;
     padding: 0;
