--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ html, body, #container, #map {
 
 nav {
     width: 200px;
-    height: 100%;
+    height: calc(100% - 35px);
     position: absolute;
     transform: translate(-200px, 0);
     transition: transform 0.3s ease;
@@ -16,7 +16,7 @@ nav {
 nav.open {
     background-color: white;
     z-index: 2;
-    transform: translate(0, 0);
+    transform: translate(0, 35px);
 }
 
 a {
