--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ html, body, #container {
 }
 
 #map {
-    height: calc(100% - 37px);
+    height: calc(100% - 45px);
     width: 100%;
     margin: 0;
     padding: 0;
@@ -14,9 +14,9 @@ html, body, #container {
 
 nav {
     width: 250px;
-    height: calc(100% - 35px);
+    height: calc(100% - 45px);
     position: absolute;
-    transform: translate(-250px, 35px);
+    transform: translate(-250px, 45px);
     transition: transform 0.3s ease;
     z-index: 2;
     background-color:white;
@@ -25,7 +25,7 @@ nav {
 nav.open {
     background-color: white;
     z-index: 2;
-    transform: translate(0, 35px);
+    transform: translate(0, 45px);
 }
 
 a {
@@ -58,7 +58,7 @@ a:hover {
     border-radius: 1em;
     margin-top: 15px;
     padding: 0 1em;
-    width: calc(100% - 3.2em);
+    width: calc(100% - 4.2em);
 }
 
 #menuToggle {
@@ -67,6 +67,7 @@ a:hover {
 
 @media screen and (min-width: 600px) {
     nav {
+        height: 100%;
         position: relative;
         width: 250px;
         transform: translate(0, 0);
@@ -81,5 +82,8 @@ a:hover {
     }
     #menuToggle {
         display: none;
+    }
+    #map {
+        height: 100%;
     }
 }
